fixed gap

--- a/Main Page/styles.css
+++ b/Main Page/styles.css
@@ -279,7 +279,7 @@ footer {
         padding: 12px;
     }
     .wrapper2 {
-        height: 52rem;
+        height: 49rem;
     }
     .profile {
         display: flex;
@@ -326,6 +326,8 @@ footer {
     .skills {
         display: flex;
         flex-direction: column;
+        gap: 8px; 
+        padding: 5px;
     }
     .wrapper4 {
         display: flex;
